# spring-microservices/accounts/src/main/kotlin/com/micro/accounts/controller/CustomersController.kt
@@ -10,11 +10,13 @@ import io.swagger.v3.oas.annotations.media.Schema
 import io.swagger.v3.oas.annotations.responses.ApiResponse
 import io.swagger.v3.oas.annotations.responses.ApiResponses
 import io.swagger.v3.oas.annotations.tags.Tag
+import org.slf4j.LoggerFactory
 import org.springframework.cloud.context.config.annotation.RefreshScope
 import org.springframework.http.MediaType
 import org.springframework.http.ResponseEntity
 import org.springframework.validation.annotation.Validated
 import org.springframework.web.bind.annotation.GetMapping
+import org.springframework.web.bind.annotation.RequestHeader
 import org.springframework.web.bind.annotation.RequestMapping
 import org.springframework.web.bind.annotation.RequestParam
 import org.springframework.web.bind.annotation.RestController
@@ -36,6 +38,8 @@ class CustomersController(
     private val customersService: CustomersService,
 ) {
 
+    private val logger = LoggerFactory.getLogger(CustomersController::class.java)
+
     @Operation(summary = "Fetch customer details by mobile number")
     @ApiResponses(
         ApiResponse(
@@ -54,9 +58,15 @@ class CustomersController(
     )
     @GetMapping("/fetchCustomerDetails")
     fun fetchCustomerDetails(
+        @RequestHeader("correlation-id") correlationId: String?,
         @ValidMobileNumber @RequestParam mobileNumber: String,
-    ): ResponseEntity<CustomerDetailsDto> = ResponseEntity.ok(
-        customersService.fetchCustomerDetails(mobileNumber),
-    )
+    ): ResponseEntity<CustomerDetailsDto> {
+
+        logger.debug("Correlation ID: $correlationId")
+
+        return ResponseEntity.ok(
+            customersService.fetchCustomerDetails(correlationId, mobileNumber),
+        )
+    }
 
 }
