# spring-microservices/cards/openapi/openapi-schema.json
@@ -19,8 +19,8 @@
   },
   "servers": [
     {
-      "url": "http://localhost:9000",
-      "description": "Generated server url"
+      "url": "http://localhost:8072/micro/cards",
+      "description": "Cards Edge"
     }
   ],
   "tags": [
@@ -48,22 +48,22 @@
           "required": true
         },
         "responses": {
-          "200": {
-            "description": "Card updated successfully",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Response"
-                }
-              }
-            }
-          },
           "500": {
             "description": "Internal Server Error",
             "content": {
               "application/json": {
                 "schema": {
                   "$ref": "#/components/schemas/ErrorResponse"
+                }
+              }
+            }
+          },
+          "200": {
+            "description": "Card updated successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Response"
                 }
               }
             }
@@ -99,8 +99,8 @@
           }
         ],
         "responses": {
-          "400": {
-            "description": "Card Already Exists",
+          "500": {
+            "description": "Internal Server Error",
             "content": {
               "application/json": {
                 "schema": {
@@ -109,8 +109,8 @@
               }
             }
           },
-          "500": {
-            "description": "Internal Server Error",
+          "400": {
+            "description": "Card Already Exists",
             "content": {
               "application/json": {
                 "schema": {
@@ -141,6 +141,14 @@
         "operationId": "fetchCardDetails",
         "parameters": [
           {
+            "name": "correlation-id",
+            "in": "header",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
             "name": "mobileNumber",
             "in": "query",
             "required": true,
@@ -160,22 +168,22 @@
               }
             }
           },
-          "200": {
-            "description": "Card details fetched successfully",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Card"
-                }
-              }
-            }
-          },
           "404": {
             "description": "Card not found",
             "content": {
               "application/json": {
                 "schema": {
                   "$ref": "#/components/schemas/ErrorResponse"
+                }
+              }
+            }
+          },
+          "200": {
+            "description": "Card details fetched successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Card"
                 }
               }
             }
@@ -232,22 +240,22 @@
         "summary": "Get build info",
         "operationId": "getBuildInfo",
         "responses": {
-          "200": {
-            "description": "Build info fetched successfully",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/BuildInfo"
-                }
-              }
-            }
-          },
           "500": {
             "description": "Internal Server Error",
             "content": {
               "application/json": {
                 "schema": {
                   "$ref": "#/components/schemas/ErrorResponse"
+                }
+              }
+            }
+          },
+          "200": {
+            "description": "Build info fetched successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/BuildInfo"
                 }
               }
             }
@@ -293,22 +301,22 @@
               }
             }
           },
-          "200": {
-            "description": "Card deleted successfully",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Response"
-                }
-              }
-            }
-          },
           "304": {
             "description": "Card not deleted",
             "content": {
               "application/json": {
                 "schema": {
                   "$ref": "#/components/schemas/ErrorResponse"
+                }
+              }
+            }
+          },
+          "200": {
+            "description": "Card deleted successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Response"
                 }
               }
             }
